--- a/golf/templates/golf/base.html
+++ b/golf/templates/golf/base.html
@@ -9,14 +9,14 @@
     <link rel="stylesheet" href="{% static 'golf/css/home.css' %}">
     <link rel="stylesheet" href="{% static 'golf/css/shot_predictor.css' %}">
     <link rel="stylesheet" href="{% static 'golf/css/result.css' %}">
-    <link rel="stylesheet" href="{% static  'golf/css/windy.css  %'}"
-
+    <link rel="stylesheet" href="{% static 'golf/css/windy.css' %}">
 </head>
 <body>
     <nav class="navbar">
         <ul>
             <li><a href="{% url 'home' %}">Home</a></li>
-            <li><a href="{% url 'shot_predictor' %}">Predict Shot</a></li>  <!-- Fixed the extra '<<' -->
+            <li><a href="{% url 'shot_predictor' %}">Predict Shot</a></li>  
+            <li><a href="{% url 'scorecard' %}">Scorecard</a></li>
         </ul>
     </nav>
 
@@ -24,5 +24,7 @@
         {% block content %}
         {% endblock %}
     </div>
+
+
 </body>
 </html>
