--- a/static/golf/css/shot_predictor.css
+++ b/static/golf/css/shot_predictor.css
@@ -2,8 +2,8 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f9f9f9;
-    color: #333;
+    background-color: #324a3b;
+    color: #0c0b0b;
 }
 
 /* Container for the main content */
